2003-01-04  JMB  File selector menu & toolbar, MobileDB import, better
                 sizing of column and condition editor dialogs, file extension
                 added for new files

    The file selector now has a "File" menu and 3 toolbar buttons; in
    addition to the previous functionality, these let you delete existing
    files.  The File menu also contains an option to create a new file
    from the data in a MobileDB file; MobileDB is a popular database
    program for PalmOS, many reference database files and such can be
    downloaded for it at no cost.

    Applied a patch to improve sizing of the column editor and condition
    editor dialogs; the hard-coded values didn't work well on the SL-C700.

    Another patch for the SL-C700; new files now have the ".pob" extension
    added so they show up correctly in the "Files" tab.

2002-12-07  JMB  Time columns, date picker uses appropriate week start day

    There is now a "Time" column type.  It uses the Qtopia system setting
    for 12/24 hour display preference, and there is a "Show Seconds"
    checkbox in the PortaBase preferences dialog.  Times in imported CSV
    files can be formatted in either 12 or 24 hour format, or in number
    of seconds past midnight, or -1 or blank for a "None" time.

    The date picker calendar widget now uses the Qtopia system setting
    for which day the week starts on (Sunday or Monday) and displays the
    calendar appropriately.

2002-12-01  JMB  Bugfix in filter condition indices, filtered export

    The data column for filter condition position indices had been declared
    incorrectly, causing problems when loading filters from older format
    PortaBase files; this should be fixed now (although the original
    condition order is often not recoverable; a new valid order is defined).

    The CSV export feature now exports only rows which pass the current
    filter.  For the old "export all" behavior, just select the "All Rows"