@@ -2,7 +2,6 @@ File properties dialog (size, rows, etc.)
 Alternate-row shading
 Optional database file encryption
 Rename and copy file options
-Read-only row viewer
 Option to hide navigation bar (and show all rows)
 Option to show Notes as multiline edit fields in row editor
 "Copy row" menu item
